--- a/style-rtl.css
+++ b/style-rtl.css
@@ -11,7 +11,7 @@
 }
 #branding-wrapper {
   float: right;
-  padding: 65px 25px 65px 0;
+  padding: 45px 25px 45px 0;
 }
 #site-slogan {
   margin: 2px 3px 0 0;
